# gr-variable

./: .gitignore  CMakeLists.txt  LICENSE  MANIFEST.md  README.md  build.sh
cmake/Modules/: varConfig.cmake  variableConfig.cmake
docs/: README.var  README.variable
docs/doxygen/: Doxyfile.in
docs/doxygen/other/: group_defs.dox  main_page.dox
examples/: minimal_working_example.grc  minimal_working_example.py
grc/: CMakeLists.txt  var_sink_x.xml  variable_sink_x.xml
include/var/: CMakeLists.txt  api.h
include/variable/: CMakeLists.txt  api.h
lib/: CMakeLists.txt  qa_var.cc  qa_var.h  qa_variable.cc  qa_variable.h  test_var.cc  test_variable.cc
python/: CMakeLists.txt  __init__.py  qa_var_sink_x.py  qa_variable_sink_x.py  var_sink_x.py  variable_sink_x.py
swig/: CMakeLists.txt  var_swig.i  variable_swig.i
